# kiu

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml
apps/flights/: constants.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
apps/flights/fixtures/: flights.json
apps/flights/migrations/: 0001_initial.py
apps/flights/tests/: tests_views.py
kiu/: asgi.py  local_settings.example.py  settings.py  urls.py  wsgi.py
